# llm-hands-on

./: docker-compose.yml  model.py  phase_1_main.py  phase_2_main.py  pyproject.toml  right_model_main.py
advanced_retrievers_llamaindex/: auto_merging_retriever.py  bm25_retriever.py  docs.py  document_retriever.py  fusion_retriever.py  hybrid_retriever.py  recursive_retriever.py  retriever.py  vector_retriever.py
advanced_retrievers_llamaindex/models/: __init__.py
faiss/: 20news_group.py  pyproject.toml
flask_app/: app.py  config.py  llm_test.py  model.py
flask_app/templates/: index.html
food_recommendations/: advanced_search.py  enhanced_rag_chatbot.py  interactive_search.py  llm_model.py  shared_functions.py
image-generation/: main.py
qa_bot/: gradio_demo.py  llm.py  loader.py  qabot.py  web_base_demo.py
rag/: doc_processing.py  embedding.py  rag.py
similarity_search_chromadb/: client.py  similarity_book_search.py  similarity_employeedata.py  similarity_search.py
smarter_search/: loader.py  multi-query.py  parent-loader.py  query.py  self-query.py  text_splitter.py
smarter_search/models/: config.py  embedding.py
text-to-speech/: generate_story.py
text-to-speech/models/: __init__.py  config.py  model.py
