[project]
name = "llm-hands-on"
version = "0.1.0"
description = ""
authors = [
    {name = "gianglt1",email = "gianglt2198@gmail.com"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-core (>=1.3.0,<2.0.0)",
    "langchain-openrouter (>=0.2.1,<0.3.0)",
    "flask (>=3.1.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
