[project]
name = "llm-hands-on"
version = "0.1.0"
description = ""
authors = [
    {name = "gianglt1",email = "gianglt2198@gmail.com"}
]
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-core (>=1.3.0,<2.0.0)",
    "langchain-openrouter (>=0.2.1,<0.3.0)",
    "flask (>=3.1.3,<4.0.0)",
    "transformers (>=5.5.4,<6.0.0)",
    "chromadb (>=1.5.8,<2.0.0)",
    "wget (>=3.2,<4.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "langchain-openai (>=1.1.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-classic (>=1.0.4,<2.0.0)",
    "gradio (>=6.13.0,<7.0.0)",
    "llama-index (>=0.14.21,<0.15.0)",
    "llama-index-embeddings-langchain (>=0.5.0,<0.6.0)",
    "llama-index-llms-langchain (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
